--- a/src/main/webapp/WEB-INF/jsp/common/footer.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/footer.jspf
@@ -1,12 +1,12 @@
-
+<%--It is a good practice to include JS files at the botttom of the body--%>
 <script src="webjars/jquery/1.9.1/jquery.min.js"></script>
 <script src="webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="webjars/bootstrap-datepicker/1.0.1/js/bootstrap-datepicker.js"></script>
+<%--This script sets datepicker object on targetDate--%>
 <script>
     $('#targetDate').datepicker({
         format: 'dd/mm/yyyy'
     });
 </script>
-
 </body>
 </html>
